Small layout fix on narrow screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -297,6 +297,12 @@ foooter a,
     margin-right: 10px;
 }
 
+@media only screen and (min-width: 993px) {
+    .container {
+        width: 90%;
+    }
+}
+
 @media only screen and (max-width: 992px) {
     
     .container {
